# Sudoku-Solver

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  Sudoku-solver.cpp  Sudoku-solver.h  aclocal.m4  config.h.in  config.status  configure  configure.ac  main.cpp  sudoku.txt
Sudoku-solver.xcodeproj/: project.pbxproj
Sudoku-solver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Sudoku-solver.xcodeproj/project.xcworkspace/xcuserdata/sireesh.xcuserdatad/: UserInterfaceState.xcuserstate
Sudoku-solver.xcodeproj/xcuserdata/sireesh.xcuserdatad/xcschemes/: Sudoku-solver.xcscheme  xcschememanagement.plist
docs/: Makefile.am  Makefile.in  Sudoku-solver.6  documentation.txt  ssolver.6
src/: Makefile.am  Makefile.in  Sudoku-solver.cpp  Sudoku-solver.h  main.cpp
test-sudokus/: solve-sudokus.sh  test.sudoku  unsolvable.sudoku
